--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "mongoose": "5.4.16",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "ejs": "^2.6.1",
+    "bcrypt": "^3.0.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "express-ejs-layouts": "^2.5.0",
+    "connect-flash": "^0.1.1",
+    "express-session": "^1.15.6"
   }
 }
