--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,7 +27,6 @@
   },
   "homepage": "https://github.com/tmibvishal/campusBid#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
     "mongoose": "5.4.16",
     "express": "^4.16.4",
     "ejs": "^2.6.1",
@@ -36,5 +36,8 @@
     "express-ejs-layouts": "^2.5.0",
     "connect-flash": "^0.1.1",
     "express-session": "^1.15.6"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
