--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   },
   "homepage": "https://github.com/tmibvishal/campusBid#readme",
   "dependencies": {
-    "mongoose": "5.4.16",
-    "express": "^4.16.4",
-    "ejs": "^2.6.1",
-    "bcrypt": "^3.0.4",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "express-ejs-layouts": "^2.5.0",
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
-    "express-session": "^1.15.6"
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.15.6",
+    "mongoose": "5.4.16",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
