--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express-session": "^1.15.6",
     "mongoose": "5.4.16",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "metaphone": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
